# ruqola

./: .gitignore
LICENSES/: MIT.txt
docker/: Dockerfile  README.md  init.sh
docker/scripts/: additional.sh  init.sh
src/apps/: CMakeLists.txt  e2ekeytool.cpp
src/core/: CMakeLists.txt
src/core/autotests/: CMakeLists.txt  masterkeytest.cpp  messageencryptiondecryptiontest.cpp  messageencryptiondecryptiontest.h  rsapairtest.cpp  rsapairtest.h  sessionkeydistributiontest.cpp  sessionkeydistributiontest.h  sessionkeytest.cpp  testmasterkey.cpp  testmasterkey.h  uploaddownloadrsakeypairtest.cpp  uploaddownloadrsakeypairtest.h
src/core/encryption/: encryptionutils.cpp  encryptionutils.h  ruqolaencryptiondebug.cpp
src/core/encryption/tests/: testmasterkey.cpp
src/core/localdatabase/: e2ekeystore.cpp  e2ekeystore.h  localdatabasebase.h
src/core/localdatabase/autotests/: CMakeLists.txt  e2ekeystoretest.cpp  e2ekeystoretest.h
src/rocketchatrestapi-qt/: CMakeLists.txt  restapiabstractjob.cpp
src/rocketchatrestapi-qt/e2e/: provideuserswithsuggestedgroupkeysjob.cpp  provideuserswithsuggestedgroupkeysjob.h
tests/: CMakeLists.txt
tests/encryptiontest/: CMakeLists.txt  encryptiontestcli.cpp  encryptiontestgui.cpp  envutils.cpp  envutils.h  loginmanager.cpp  loginmanager.h  uploaddownloadrsakeypair.cpp  uploaddownloadrsakeypair.h
tests/encryptiontestgui/: CMakeLists.txt  encryptiontestgui.cpp  encryptiontestgui.h
